Fixed MPPrompt relayout issue when clicking on buttons. Work on issue #1.

--- a/css/mp.css
+++ b/css/mp.css
@@ -162,6 +162,7 @@ div {
 /* MPPrompt css rules */
 
 .prompt_back {
+    z-index: 200;
     position: absolute;
     top: 0px;
     left: 0px;
